Update static web app route configuration

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -10,7 +10,8 @@
       "route": "/admin/*",
       "allowedRoles": [
         "authenticated",
-        "administrator"
+        "administrator",
+        "anonymous"
       ]
     }
   ],
