--- a/src/AgainstTheSpread.Web/wwwroot/staticwebapp.config.json
+++ b/src/AgainstTheSpread.Web/wwwroot/staticwebapp.config.json
@@ -30,6 +30,24 @@
       "allowedRoles": [
         "authenticated"
       ]
+    },
+    {
+      "route": "/admin",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate"
+      }
+    },
+    {
+      "route": "/.auth/*",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate"
+      }
+    },
+    {
+      "route": "/index.html",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate"
+      }
     }
   ],
   "responseOverrides": {
