--- a/src/AgainstTheSpread.Web/wwwroot/staticwebapp.config.json
+++ b/src/AgainstTheSpread.Web/wwwroot/staticwebapp.config.json
@@ -24,6 +24,9 @@
       }
     }
   },
+  "platform": {
+    "apiRuntime": "dotnet-isolated:8.0"
+  },
   "routes": [
     {
       "route": "/api/upload-lines",
